corrected footer spacing on homepage

--- a/sass/_home-headshot.scss
+++ b/sass/_home-headshot.scss
@@ -1,5 +1,10 @@
+.remove-scroll {
+  overflow: hidden;
+}
+
 .intro-container {
-  position: sticky;
+  border: 2px solid red;
+  //position: sticky;
   top: 5rem;
   scroll-snap-align: center;
   width: 100%;
@@ -14,9 +19,13 @@
   background-repeat: no-repeat;
   background-size: cover;
   .background-overlay {
+    border: 3px solid purple;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.3);
     z-index: 100;
+    footer {
+      top: 0 !important;
+    }
   }
 }
 .intro-content {
@@ -28,6 +37,7 @@
   max-width: 1400px;
   margin: auto;
   padding: 0 9rem;
+  border: 3px solid green;
   span {
     color: $primary-color;
     text-shadow: none;
@@ -42,7 +52,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // border: 3px solid blue;
+  border: 3px solid blue;
 
   .first-container {
     width: 100%;
@@ -65,7 +75,7 @@
         text-transform: uppercase;
       }
       h1 {
-        font-size: clamp(3.2rem, 8vw, 8rem);
+        font-size: clamp(2.5rem, 8vw, 8rem);
         font-weight: 700;
         letter-spacing: -1px;
       }
@@ -121,12 +131,12 @@
     h1 {
       font-weight: 700;
       text-transform: uppercase;
-      font-size: clamp(3.2rem, 8vw, 8rem);
+      font-size: clamp(2.5rem, 8vw, 8rem);
       letter-spacing: -1px;
     }
     h4 {
       font-weight: 500;
-      font-size: clamp(1.2rem, 3vw, 2.5rem);
+      font-size: clamp(1rem, 3vw, 2.5rem);
       letter-spacing: 6px;
     }
     .billingual {
@@ -148,7 +158,7 @@
       line-height: 1;
       text-shadow: 2px 2px 4px #5e5e5e;
       font-weight: 700;
-      font-size: clamp(3.2rem, 8vw, 8rem);
+      font-size: clamp(2.5rem, 8vw, 8rem);
       letter-spacing: -1px;
       span {
         color: inherit;
@@ -159,7 +169,7 @@
 
     .location-1 {
       font-weight: 500;
-      font-size: clamp(1.2rem, 3vw, 2.5rem);
+      font-size: clamp(1rem, 3vw, 2.5rem);
       letter-spacing: 6px;
     }
   }
@@ -181,12 +191,12 @@
 
     h2 {
       font-weight: 700;
-      font-size: clamp(3.2rem, 8vw, 8rem);
+      font-size: clamp(2.5rem, 8vw, 8rem);
       letter-spacing: -1px;
     }
     h3 {
       font-weight: 600;
-      font-size: clamp(1.2rem, 3vw, 2.5rem);
+      font-size: clamp(1rem, 3vw, 2.5rem);
       letter-spacing: 6px;
       color: $primary-color;
     }
@@ -222,14 +232,14 @@
     }
     h2 {
       letter-spacing: -3px;
-      font-size: clamp(3.2rem, 8vw, 8rem);
+      font-size: clamp(2.5rem, 8vw, 8rem);
       font-weight: 700;
       text-transform: capitalize;
       font-style: italic;
     }
     h4 {
       letter-spacing: 6px;
-      font-size: clamp(1.2rem, 3vw, 2.5rem);
+      font-size: clamp(1rem, 3vw, 2.5rem);
     }
   }
   .fifth-container {
@@ -247,14 +257,14 @@
     }
     h1 {
       font-weight: 700;
-      font-size: clamp(3.2rem, 8vw, 8rem);
+      font-size: clamp(2.5rem, 8vw, 8rem);
       letter-spacing: -1px;
     }
 
     h3 {
       letter-spacing: 6px;
       font-weight: 400;
-      font-size: clamp(1.2rem, 3vw, 2.5rem);
+      font-size: clamp(1rem, 3vw, 2.5rem);
     }
   }
 }
